[package]
name = "scale-in-ecs"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
aws-config = { version = "1.3.0", features = ["behavior-version-latest"] }
aws-sdk-autoscaling = { version = "1.23.0", features = ["behavior-version-latest"] }
aws-sdk-ecs = { version = "1.23.0", features = ["behavior-version-latest"] }
aws-sdk-elasticache = { version = "1.24.0", features = ["behavior-version-latest"] }
aws-sdk-elasticloadbalancingv2 = { version = "1.23.0", features = ["behavior-version-latest"] }
aws-sdk-rds = { version = "1.31.0", features = ["behavior-version-latest"] }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
